zero-cost-templating/tests/ui/compile_fail/wrong_type.stderr
error[E0308]: mismatched types
  --> tests/ui/compile_fail/wrong_type.rs:19:24
   |
19 |     let test: String = copyright_year7!(template, Cow::from("2023".to_string()));
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `()`
